# luasofia

./: AUTHOR  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  NEWS  README  VERSION  autogen.sh  configure.ac  luasofia.lua
alien/: sofia.lua  test_su.lua
doc/devel/: README
doc/devel/new_module_example/: luasofia_example.c  luasofia_example_proxy_private.h
doc/new_module_example/: luasofia_example.c  luasofia_example_proxy_private.h
doc/usage/: README
doc/usage/textile/: Home.txl  ModuleNUA.txl  ModuleSDP.txl  ModuleSIP.txl  ModuleSOA.txl  ModuleSU.txl  ModuleURL.txl  Proxy.txl  TagTable.txl  TagsAndConstants.txl  TagsProxy.txl
lua/: luasofia.lua
rockspec/: luasofia-0.1.5-1.rockspec  luasofia-0.1.6-1.rockspec  luasofia-0.1.7-1-builtin.rockspec  luasofia-0.1.7-1.rockspec  luasofia-0.1.8-1.rockspec
src/: Makefile  Makefile.am  luasofia.c  luasofia.h  luasofia_core.c  luasofia_nua.c  luasofia_nua.h  luasofia_proxy.c  luasofia_proxy.h  luasofia_sip.c  luasofia_sip.h  luasofia_soa.c  luasofia_soa.h  luasofia_struct.c  luasofia_struct.h  luasofia_su.c  luasofia_su.h  luasofia_su_home.c  luasofia_su_home.h  luasofia_su_root.c  luasofia_su_root.h  luasofia_su_task.c  luasofia_su_task.h  luasofia_su_timer.c  luasofia_su_timer.h  luasofia_tags.c  luasofia_tags.h  luasofia_url.c  luasofia_utils.c  luasofia_utils.h  luasofia_weak_table.c  luasofia_weak_table.h
src/msg/: luasofia_msg.c
src/nta/: luasofia_nta.c  luasofia_nta_agent.c  luasofia_nta_agent.h
src/nua/: luasofia_nua.c  luasofia_nua.h  luasofia_nua_handle.c  luasofia_nua_handle.h
src/sdp/: luasofia_sdp.c  luasofia_sdp_attribute_private.h  luasofia_sdp_bandwidth_private.h  luasofia_sdp_connection_private.h  luasofia_sdp_key_private.h  luasofia_sdp_list_private.h  luasofia_sdp_media_private.h  luasofia_sdp_origin_private.h  luasofia_sdp_parser.c  luasofia_sdp_parser.h  luasofia_sdp_repeat_private.h  luasofia_sdp_rtpmap_private.h  luasofia_sdp_session_private.h  luasofia_sdp_time_private.h
src/sip/: luasofia_sip.c  luasofia_sip_accept_private.h  luasofia_sip_addr_private.h  luasofia_sip_allow_private.h  luasofia_sip_authenticate_private.h  luasofia_sip_call_id_private.h  luasofia_sip_contact_private.h  luasofia_sip_content_disposition_private.h  luasofia_sip_content_length_private.h  luasofia_sip_content_type_private.h  luasofia_sip_cseq_private.h  luasofia_sip_event_private.h  luasofia_sip_msg_generic_private.h  luasofia_sip_msg_payload_private.h  luasofia_sip_private.h  luasofia_sip_request_private.h  luasofia_sip_status_private.h  luasofia_sip_subscription_state_private.h  luasofia_sip_via_private.h
src/soa/: luasofia_soa.c
src/su/: luasofia_su.c  luasofia_su.h  luasofia_su_home.c  luasofia_su_home.h  luasofia_su_root.c  luasofia_su_root.h  luasofia_su_tags.c  luasofia_su_tags.h  luasofia_su_task.c  luasofia_su_task.h  luasofia_su_timer.c  luasofia_su_timer.h
src/su-glib/: luasofia_su_glib.c  luasofia_su_glib_root.c  luasofia_su_glib_root.h
src/su_glib/: luasofia_su_glib.c  luasofia_su_glib_root.c  luasofia_su_glib_root.h
src/tport/: luasofia_tport.c
src/url/: luasofia_url.c
src/utils/: luasofia_const.c  luasofia_const.h  luasofia_log.c  luasofia_log.h  luasofia_proxy.c  luasofia_proxy.h  luasofia_tags.c  luasofia_tags.h  luasofia_userdata_table.c  luasofia_userdata_table.h  luasofia_utils.c  luasofia_utils.h  luasofia_weak_table.c  luasofia_weak_table.h
swig/: Makefile  su.i  su_socket.i  su_time.i  su_wait.i  test_su.lua
test/: caller.lua  home.lua  make_call_loop.lua  nta.lua  nua.lua  root.lua  sdp.lua  su-glib.lua  su.lua  su_glib.lua  su_glib_require.lua  timer.lua  timer_for_ever.lua  url.lua
test/unit_tests/: url.lua
